feat: 学内募金の登録更新APIを追加
