# openapi/openapi.yaml
@@ -1286,11 +1286,11 @@ paths:
               schema:
                 type: string
                 format: binary
-  /campus_donations/years/{year}/floors/{floor_number}:
+  /campus_donations/years/{year}/group_keys/{group_key}/floors:
     get:
       tags:
         - campus_donation
-      description: 指定したグループの棟または全棟の指定フロア教員情報を取得
+      description: 指定した棟グループの教員別募金情報を取得
       parameters:
         - name: year
           in: path
@@ -1298,27 +1298,72 @@ paths:
           required: true
           schema:
             type: integer
-        - name: floor_number
+        - name: group_key
           in: path
-          description: floor_number
+          description: group_key
           required: true
           schema:
-            type: string
-        - name: group_key
+            $ref: "#/components/schemas/campusDonationBuildingGroupKey"
+        - name: floor_number
           in: query
-          description: group_key
+          description: floor_number
           required: false
           schema:
-            $ref: "#/components/schemas/campusDonationBuildingGroupKey"
+            type: string
       responses:
         "200":
-          description: 指定したグループの棟または全棟の指定フロア教員情報を取得
+          description: 指定した棟グループの教員別募金情報を取得
           content:
             application/json:
               schema:
                 type: array
                 items:
                   $ref: "#/components/schemas/campusDonationBuildingFloor"
+  /campus_donations:
+    post:
+      tags:
+        - campus_donation
+      description: 学内募金の登録
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/campusDonationRequest"
+        required: true
+      responses:
+        "200":
+          description: 登録された学内募金が返ってくる
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/campusDonation"
+      x-codegen-request-body-name: campusDonationRequest
+  /campus_donations/{id}:
+    put:
+      tags:
+        - campus_donation
+      description: 学内募金の更新
+      parameters:
+        - name: id
+          in: path
+          description: 学内募金ID
+          required: true
+          schema:
+            type: integer
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/campusDonationRequest"
+        required: true
+      responses:
+        "200":
+          description: 更新された学内募金が返ってくる
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/campusDonation"
+      x-codegen-request-body-name: campusDonationRequest
   /income_expenditure_management/csv/download:
     get:
       tags:
@@ -2840,6 +2885,71 @@ components:
       required:
         - unsettledAmount
         - unpackedAmount
+    campusDonationRequest:
+      type: object
+      required:
+        - userId
+        - teacherId
+        - yearId
+        - price
+        - receivedAt
+      properties:
+        userId:
+          type: integer
+          description: 募金を登録・更新したユーザーID
+          example: 1
+        teacherId:
+          type: integer
+          description: 募金対象の教員ID
+          example: 1
+        yearId:
+          type: integer
+          description: 年度ID
+          example: 1
+        price:
+          type: integer
+          description: 募金金額
+          example: 2000
+        receivedAt:
+          type: string
+          format: date
+          description: 受領日
+          example: 2026-04-28
+    campusDonation:
+      type: object
+      required:
+        - id
+        - userId
+        - teacherId
+        - yearId
+        - price
+        - receivedAt
+      properties:
+        id:
+          type: integer
+          description: 学内募金ID
+          example: 1
+        userId:
+          type: integer
+          description: 募金を登録・更新したユーザーID
+          example: 1
+        teacherId:
+          type: integer
+          description: 募金対象の教員ID
+          example: 1
+        yearId:
+          type: integer
+          description: 年度ID
+          example: 1
+        price:
+          type: integer
+          description: 募金金額
+          example: 2000
+        receivedAt:
+          type: string
+          format: date
+          description: 受領日
+          example: 2026-04-28
     campusDonationTeacher:
       description: 棟・階ごとの教員別募金情報
       type: object
